terraform/modules/vpc/igw.tf
#Internet Gateway
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc.id

  tags = {
    Name    = "${var.main_project}-igw"
    Project = var.main_project
  }
}
